@@ -2,6 +2,8 @@
   It's in samples/bigdemo, and you start it by running Main.rbw.
   It doesn't work yet, but will be great when it does!
 - Get new inheritance chain code to compile under MS Win (Roy Sutton)
+- Fix DC.h and WindowDC.i to properly handle pure virtual methods, 
+  allowing the caret sample to work again
 
 
 ====0.0.27 tag included all of this:===
